--- a/src/content/projects/inventory-management-system.mdx
+++ b/src/content/projects/inventory-management-system.mdx
@@ -8,4 +8,4 @@ I designed and implemented this app to solve a logistics issue for a small local
 
 The kitchen kept running out of important ingredients when they needed them most, and had a hard time remembering when to reorder commonly-used ingredients.
 
-The web application I designed is responsible and 100% mobile compatible. It allows staff members to take inventory snapshots so they always know what is on the shelves, and automates the creation of an order sheet when item stock drops below a preset threshold.
+The web application I designed is responsive and 100% mobile compatible. It allows staff members to take inventory snapshots so they always know what is on the shelves, and automates the creation of an order sheet when item stock drops below a preset threshold.
